tests/good/json4.lens
match upon (entry.hi){
    "(?<french>Bonjour)"
}

stream {
    print(entry.french)
}
