tests/bad/match_upon2.lens
match(entry) upon (hi) {
    "(?<foo>foo)"
}
